Fixed alignment issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,16 @@
 * {
     box-sizing: border-box;
-    align-content: center;
 }
-
+div.flex-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+}
+ul {
+  list-style-type: none;
+}
 /* Add a black background color to the top navigation */
 .topnav {
     background-color: #333;
